fix: update dark mode form input background color for better contrast

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -26,7 +26,7 @@ html.dark {
     --vpcui-color-main-background: #090806;
     --vpcui-color-main-text: #fff;
     --vpcui-color-sub-text: #aaa;
-    --vpcui-color-form-input-background: #3f3f3f;
+    --vpcui-color-form-input-background: #202020;
 }
 
 html {
